tests/var_infer_null_bad.stderr
tests/var_infer_null_bad.hop:3:10: error: HOP2026: cannot infer type from null; add explicit type
