tests/var_infer_null_bad.hop
// Verifies variable inference null is rejected.
fn example() {
	var x = null
	_ = x
}
